
    * The ``pb`` argument to ``fetch()`` is deprecated.
      (Martin Pool)

  TESTING:

    * ``bzrlib.tests.TestCase`` now fails the test if its own ``setUp``
      and ``tearDown`` weren't called.  This catches faulty tests that
      forget to upcall when overriding ``setUp`` and ``tearDown``.  Those
      faulty tests were not properly isolated.
      (Andrew Bennetts, Robert Collins)

  INTERNALS:

    * ``DirState`` can now be passed a custom ``SHA1Provider`` object
      enabling it to store the sha1 and stat of the canonical (post
      content filtered) form. (Ian Clatworthy)

    * New ``assertLength`` method based on one Martin has squirreled away
      somewhere. (Robert Collins, Martin Pool)

    * New hook ``BzrDir.pre_open`` which runs before opening ``BzrDir``
      objects, allowing better enforcement of the smart server jail when
      dealing with stacked branches. (Robert Collins, Andrew Bennetts)

    * New repository method ``refresh_data`` to cause any repository to
      make visible data inserted into the repository by a smart server
      fetch operation. (Robert Collins, Andrew Bennetts)

    * Removed ``InterRemoteToOther``, ``InterOtherToRemote`` and
      ``InterPackToRemotePack`` classes, as they are now unnecessary.
      (Andrew Bennetts)
      
    * ``_walk_to_common_revisions`` will now batch up at least 50
      revisions before calling ``get_parent_map`` on the target,
      regardless of ``InterRepository``.
      (Andrew Bennetts, Robert Collins)


bzr 1.13 "paraskavedekatriaphobia" 2009-03-14
---------------------------------------------

This release includes bug fixes and a few performance and feature improvements.
GNU Changelog output can now be produced by ``bzr log --gnu-changelog``.  Debug
flags can now be set in ``~/.bazaar/bazaar.conf``. Lightweight Checkouts and
Stacked Branches should both be much faster over remote connections.

  CHANGES FROM bzr 1.13rc1 2009-03-10:
