@@ -210,7 +210,7 @@ class ftp_server(medusa.ftp_server.ftp_server):
         trace.mutter('ftp_server %s: %s', type, message)
 
 
-class FTPServer(transport.Server):
+class FTPTestServer(transport.Server):
     """Common code for FTP server facilities."""
 
     def __init__(self):
@@ -250,7 +250,7 @@ class FTPServer(transport.Server):
         # Don't let it loop forever, or handle an infinite number of requests.
         # In this case it will run for 1000s, or 10000 requests
         self._async_thread = threading.Thread(
-                target=FTPServer._asyncore_loop_ignore_EBADF,
+                target=FTPTestServer._asyncore_loop_ignore_EBADF,
                 kwargs={'timeout':0.1, 'count':10000})
         self._async_thread.setDaemon(True)
         self._async_thread.start()
