@@ -113,6 +113,12 @@ IN DEVELOPMENT
       faulty tests were not properly isolated.
       (Andrew Bennetts, Robert Collins)
 
+    * ``medusa`` is not used anymore as an FTP test server starting with
+      python2.6. A new FTP test server based on ``pyftplib`` can be used
+      instead. This new server is a soft dependency as medusa which is still
+      preferred if both are available (modulo python version).  (Vincent
+      Ladeuil)
+
   INTERNALS:
 
     * ``DirState`` can now be passed a custom ``SHA1Provider`` object
